--- a/function2.0/bai2.html
+++ b/function2.0/bai2.html
@@ -23,10 +23,11 @@
             return false;
         }
         let primeNumber = fixArr.filter(test);
-        let result = primeNumber.reduce((accumulator, item) => {
-            return accumulator + item;
-        })
-        console.log(`tong so nguyen to co trong chuoi la ${result}`)
+        // let result = primeNumber.reduce((accumulator, item) => {
+        //     return accumulator + item;
+        // })
+        // console.log(`tong so nguyen to co trong chuoi la ${result}`)
+        console.log(primeNumber);
     </script>
 </body>
 
