--- a/function2.0/bai1.html
+++ b/function2.0/bai1.html
@@ -7,17 +7,18 @@
 </head>
 <body>
     <script>
-         let number = [1,4,9,9,6]
+         let number = [1,4,4,9,9]
         let arr = number.sort((a, b) => {
             return b - a;
         })
+        // arr=[9,9,4,4,1]
         let max = arr[0];
-        for (i = 0; i < arr.length; i++) {
+        for (let i = 0; i < arr.length; i++) {
             if (arr[0] !== arr[1]) {
                 console.log(arr[i]);
                 break;
             } else {
-                 result = arr.find((item) => {
+                let result = arr.find((item) => {
                     return item < max;
                 })
                 console.log(`Số lớn nhất và là số duy nhất là : ${result}`);
