--- a/object/btvn.html
+++ b/object/btvn.html
@@ -15,7 +15,7 @@
                  newString=newString.slice(newString.indexOf(input[i])+1);
                }
                newString += input[i];
-               if (String.length > maxString.length) {
+               if (newString.length > maxString.length) {
                   maxString  = newString;
                 
                }
