--- a/session13/bai2.html
+++ b/session13/bai2.html
@@ -15,7 +15,7 @@
     </div>
     <br />
     <input type="button" id="btn2" value="click" />
-    <script language="javascript">
+    <script >
         document.getElementById("btn2").onclick = function () {
             document.getElementById("content").style.display = "block";
         };
