--- a/session4-5/css/raww/bai1/position.html
+++ b/session4-5/css/raww/bai1/position.html
@@ -23,7 +23,7 @@
 
         }
         .box3{
-            position: ;
+            position: absolute;
             width: 100px;
             height: 100px;
             background-color: yellow;
